adding views for traveling

--- a/app/src/main/res/layout/activity_solar.xml
+++ b/app/src/main/res/layout/activity_solar.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.UniverseActivity">
+    tools:context=".views.SolarActivity">
 
-    <include layout="@layout/content_universe" />
+    <include layout="@layout/content_solar" />
 
 </android.support.constraint.ConstraintLayout>
