--- a/app/src/main/res/layout/content_planet.xml
+++ b/app/src/main/res/layout/content_planet.xml
@@ -41,7 +41,7 @@
         app:srcCompat="@drawable/market_bttn" />
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/travel_button"
         android:layout_width="91dp"
         android:layout_height="123dp"
         android:layout_alignParentTop="true"
